--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
+    "html-webpack-plugin": "^4.2.0",
     "react-hot-loader": "^4.12.20",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
