--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "css-loader": "^3.5.2",
+    "fetch-mock": "^9.3.1",
     "html-webpack-plugin": "^4.2.0",
     "mocha": "^7.1.1",
+    "node-fetch": "^2.6.0",
     "react-hot-loader": "^4.12.20",
+    "sinon": "^9.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
