--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "scripts": {
     "dev": "npx webpack-dev-server",
     "build": "npx webpack --mode development",
-    "test": "mocha \"src/**/*.test.js\" --require @babel/register --recursive"
+    "lint": "./node_modules/.bin/eslint ./src",
+    "test": "mocha \"src/**/*.test.js\" --require @babel/register --recursive",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js":[
+      "npm run lint",
+      "prettier --write",
+      "git add"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -18,13 +27,23 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/register": "^7.9.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "css-loader": "^3.5.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
     "fetch-mock": "^9.3.1",
     "html-webpack-plugin": "^4.2.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.3",
     "mocha": "^7.1.1",
     "node-fetch": "^2.6.0",
+    "prettier": "^2.0.4",
     "react-hot-loader": "^4.12.20",
     "sinon": "^9.0.2",
     "style-loader": "^1.1.3",
