--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "lint-staged": {
     "*.js":[
-      "npm run lint",
+      "yarn lint",
       "prettier --write",
       "git add"
     ]
