--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
         "react/forbid-prop-types": 0,
         "jsx-a11y/no-noninteractive-element-interactions": 0,
         "react/jsx-props-no-spreading": 0,
-        "object-curly-newline": 0 
+        "object-curly-newline": 0,
+        "import/prefer-default-export": 0
     }
 }
